...
            modifier = Modifier
                .height(36.dp)
                .padding(horizontal = 12.dp),
            verticalAlignment = Alignment.CenterVertically
        ) {
            Text(
                text = "More...",
                style = MaterialTheme.typography.labelLarge,
                color = Primary
            )
        }
    }
}
...
